[5번 문제] 주석 작성